# ReMania-NF

./: .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  CMakeLists.txt  README.md  installApple.cmake  installLinux.cmake  installWin32.cmake
.github/workflows/: cmake.yml
assets/: ASSETS.md  README.md
assets/Packs/: Game.pak
lib/: CMakeLists.txt
src/main_app/: assetLayer.cpp  assetLayer.h  engine.cpp  engine.h  glLayer.cpp  glLayer.h  main.cpp  pch.h  physics.cpp  physics.h  utils.cpp  utils.h
tests/: CMakeLists.txt  ivXor_data.inl  test_decrypt_blowfish.cpp  test_get_key.cpp  test_get_magic.cpp  test_get_name.cpp  test_get_number_of_paks.cpp  test_get_pack_version.cpp  test_get_packlist_ver.cpp  test_get_salt.cpp  test_get_start_index.cpp  test_headerIV.cpp  test_ivXor.cpp  tests.cmake
